AX: Attribute cache is not enabled in traverseToOffsetInRange https://bugs.webkit.org/show_bug.cgi?id=262929 rdar://problem/116703599

Reviewed by Chris Fleizach.

This patch enables the AXObjectAttributeCache in the scope of
AXObjectCache::traverseToOffsetInRange. By doing this, we save
unnecessary accessibilityIsIgnored calls on the main thread.

* Source/WebCore/accessibility/AXObjectCache.cpp:
(WebCore::AXObjectCache::traverseToOffsetInRange):

Canonical link: https://commits.webkit.org/269149@main